--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/juliafercello/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "console.table": "^0.10.0",
     "dotenv": "^7.0.0",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7"
